@@ -5071,6 +5071,7 @@ Ms Pac-Man (Stella extended codes):
         <tr><td>FC </td><td>Amiga Power Play Aracde 16/32K </td><td>.FC </td></tr>
         <tr><td>FE </td><td>8K Activision (aka SCABS)</td><td>.FE </td></tr>
 		<tr><td>GL &#178;</td><td>4 or 6K GameLine Master Module</td><td>.GL </td></tr>
+		<tr><td>JANE </td><td>16K Coleco (Tarzan) </td><td>.JAN, .JANE </td></tr>
         <tr><td>MDM </td><td>Menu Driven Megacart </td><td>.MDM </td></tr>
         <tr><td>MVC </td><td>Movie Cart</td><td>.MVC </td></tr>
         <tr><td>SB </td><td>128-256K SUPERbanking </td><td>.SB </td></tr>
